syntax = "proto3";

option csharp_namespace = "KeyValueStore.Grpc";

service Store {
    rpc Get (KeyRequest) returns (ValueResponse);
    rpc Put (PutRequest) returns (PutResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message KeyRequest {
    string key = 1;
}

message ValueResponse {
    string value = 1;
    bool found = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    string message = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool deleted = 1;
    string deletedValue = 2;
}